--- a/lib/config/CMakeLists.txt
+++ b/lib/config/CMakeLists.txt
@@ -31,15 +31,13 @@ endif()
 
 add_flex_bison_dependency(config_lexer config_parser)
 
-mkembedconfig_target(base-type.conf base-type.cpp)
-
 include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 set(config_SOURCES
-  applyrule.cpp base-type.conf base-type.cpp
+  applyrule.cpp
   configcompilercontext.cpp configcompiler.cpp configitembuilder.cpp
   configitem.cpp ${FLEX_config_lexer_OUTPUTS} ${BISON_config_parser_OUTPUTS}
-  configtype.cpp expression.cpp objectrule.cpp typerule.cpp typerulelist.cpp
+  expression.cpp objectrule.cpp
 )
 
 if(ICINGA2_UNITY_BUILD)
