--- a/lib/db_ido/CMakeLists.txt
+++ b/lib/db_ido/CMakeLists.txt
@@ -17,12 +17,11 @@
 
 mkclass_target(dbconnection.ti dbconnection.thpp)
 
-mkembedconfig_target(db_ido-type.conf db_ido-type.cpp)
 mkembedconfig_target(db_ido-itl.conf db_ido-itl.cpp)
 
 set(db_ido_SOURCES
   commanddbobject.cpp dbconnection.cpp dbconnection.thpp dbconnection.thpp
-  db_ido-type.cpp db_ido-itl.cpp dbevents.cpp dbobject.cpp dbquery.cpp
+  db_ido-itl.cpp dbevents.cpp dbobject.cpp dbquery.cpp
   dbreference.cpp dbtype.cpp dbvalue.cpp endpointdbobject.cpp hostdbobject.cpp
   hostgroupdbobject.cpp idochecktask.cpp servicedbobject.cpp
   servicegroupdbobject.cpp timeperioddbobject.cpp userdbobject.cpp
