Documentation: Update Icinga Web 2 uri to /icingaweb2
fixes #8201

--- a/etc/icinga2/conf.d/hosts.conf
+++ b/etc/icinga2/conf.d/hosts.conf
@@ -32,7 +32,7 @@ object Host NodeName {
   }
   /* Uncomment if you've sucessfully installed Icinga Web 2. */
   //vars.http_vhosts["Icinga Web 2"] = {
-  //  http_uri = "/icingaweb"
+  //  http_uri = "/icingaweb2"
   //}
 
   /* Define disks and attributes for service apply rules in `services.conf`. */
