Implement validator support for function objects
fixes #8291

--- a/lib/icinga/icinga-type.conf
+++ b/lib/icinga/icinga-type.conf
@@ -174,7 +174,7 @@
 	%attribute %string "display_name",
 
 	%require "update",
-	%attribute %any "update",
+	%attribute %function "update",
 
 /*  %if (methods.update == "LegacyTimePeriod") { */
 //	%require "ranges",
@@ -188,7 +188,7 @@
 	%validator "ValidateCommandAttributes",
 
 	%require "execute",
-	%attribute %any "execute",
+	%attribute %function "execute",
 
 /*  %if (methods.execute == "PluginNotification" || methods.execute == "PluginCheck" || methods.execute == "PluginEvent") { */
 //	%require "command",
