Implement support for functions in set_if
refs #7564

--- a/lib/icinga/icinga-type.conf
+++ b/lib/icinga/icinga-type.conf
@@ -201,11 +201,13 @@
 		%attribute %dictionary "*" {
 			%attribute %string "key"
 			%attribute %string "value"
+			%attribute %function "value"
 			%attribute %string "description"
 			%attribute %number "required"
 			%attribute %number "skip_key"
 			%attribute %number "repeat_key"
 			%attribute %string "set_if"
+			%attribute %function "set_if"
 			%attribute %number "order"
 		}
 	},
