Update validators for command arguments
refs #7564

--- a/lib/icinga/icinga-type.conf
+++ b/lib/icinga/icinga-type.conf
@@ -193,8 +193,10 @@
 /*  %if (methods.execute == "PluginNotification" || methods.execute == "PluginCheck" || methods.execute == "PluginEvent") { */
 //	%require "command",
 	%attribute %string "command",
+	%attribute %function "command",
 	%attribute %array "command" {
 		%attribute %string "*"
+		%attribute %function "*",
 	},
 	%attribute %dictionary "arguments" {
 		%attribute %string "*",
