Fix missing files in the Windows package
fixes #8200

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -61,3 +61,5 @@ endif()
 if(ICINGA2_WITH_PERFDATA)
   add_subdirectory(perfdata)
 endif()
+
+set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "${CPACK_NSIS_EXTRA_INSTALL_COMMANDS}" PARENT_SCOPE)
