Add a check command for check_hpjd
refs #6225

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -885,6 +885,20 @@ object CheckCommand "nrpe" {
 	timeout = 5m
 }
 
+object CheckCommand "hpjd" {
+	import "plugin-check-command"
+
+	command = [ PluginDir + "/check_hpjd" ]
+
+	arguments = {
+		"-H" = "$hpjd_address$"
+		"-C" = "$hpjd_community$"
+		"-p" = "$hpjd_port$"
+	}
+
+	vars.hpjd_address = "$address$"
+}
+
 /* Contrib plugins */
 object CheckCommand "running_kernel" {
 	import "plugin-check-command"
