Add contributed command definitions
fixes #7209
fixes #7292
fixes #7294

Signed-off-by: Gunnar Beutner <gunnar@beutner.name>

--- a/etc/icinga2/icinga2.conf
+++ b/etc/icinga2/icinga2.conf
@@ -25,6 +25,7 @@ include "zones.conf"
  */
 include <itl>
 include <plugins>
+// include <plugins-contrib>
 
 /**
  * The features-available directory contains a number of configuration
