Add command definition for check_icmp
fixes #7873

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -899,6 +899,35 @@ object CheckCommand "hpjd" {
 	vars.hpjd_address = "$address$"
 }
 
+object CheckCommand "icmp" {
+	import "plugin-check-command"
+
+	command = [ PluginDir + "/check_icmp" ]
+
+	arguments = {
+		"-H" = {
+			value = "$icmp_address$"
+			repeat_key = false
+			order = 1
+		}
+		"-w" = "$icmp_wrta$,$icmp_wpl$%"
+		"-c" = "$icmp_crta$,$icmp_cpl$%"
+		"-s" = "$icmp_source$"
+		"-n" = "$icmp_packets$"
+		"-i" = "$icmp_packet_interval$"
+		"-I" = "$icmp_target_interval$"
+		"-m" = "$icmp_hosts_alive$"
+		"-b" = "$icmp_data_bytes$"
+		"-t" = "$icmp_timeout$"
+	}
+
+	vars.icmp_address = "$address$"
+	vars.icmp_wrta = 100
+	vars.icmp_wpl = 5
+	vars.icmp_crta = 200
+	vars.icmp_cpl = 15
+}
+
 /* Contrib plugins */
 object CheckCommand "running_kernel" {
 	import "plugin-check-command"
