Require at least one user for notification objects (user or as member of user_groups)
fixes #8067

--- a/lib/icinga/icinga-type.conf
+++ b/lib/icinga/icinga-type.conf
@@ -107,6 +107,7 @@
 
 %type Notification {
 	%validator "ValidateNotificationFilters"
+	%validator "ValidateNotificationUsers"
 
 	%require "host_name",
 	%attribute %name(Host) "host_name",
