Allow funcs in the 'env' dictionary
refs #7564

--- a/lib/icinga/icinga-type.conf
+++ b/lib/icinga/icinga-type.conf
@@ -222,6 +222,7 @@
 	},
 	%attribute %dictionary "env" {
 		%attribute %string "*"
+		%attribute %function "*"
 	},
 	%attribute %number "timeout"
 /*    } */
