Add macro config validator for command args, env, custom attr, perfdata templates
fixes #7311

--- a/lib/icinga/icinga-type.conf
+++ b/lib/icinga/icinga-type.conf
@@ -26,6 +26,7 @@
 }
 
 %type CustomVarObject {
+	%validator "ValidateCustomAttributes",
 	%attribute %dictionary "vars",
 }
 
@@ -193,6 +194,8 @@
 
 %type Command %inherits CustomVarObject {
 	%validator "ValidateCommandAttributes",
+	%validator "ValidateCommandArguments",
+	%validator "ValidateEnvironmentVariables",
 
 	%require "execute",
 	%attribute %function "execute",
