--- a/lib/perfdata/perfdata-type.conf
+++ b/lib/perfdata/perfdata-type.conf
@@ -18,6 +18,8 @@
  ******************************************************************************/
 
 %type PerfdataWriter {
+	%validator "ValidateFormatTemplates",
+
 	%attribute %string "host_perfdata_path",
 	%attribute %string "service_perfdata_path",
 	%attribute %string "host_temp_path",
@@ -28,6 +30,8 @@
 }
 
 %type GraphiteWriter {
+	%validator "ValidateNameTemplates",
+
 	%attribute %string "host",
 	%attribute %string "port",
 	%attribute %string "host_name_template",
@@ -44,4 +48,3 @@
 	%attribute %string "host",
 	%attribute %string "port",
 }
-
