Validate configured TimePeriod ranges
Requires re-throwing the hidden exceptions inside the existing
timeperiod code and validating the configured time range
strings then.

fixes #7576

--- a/lib/icinga/icinga-type.conf
+++ b/lib/icinga/icinga-type.conf
@@ -179,6 +179,8 @@
 }
 
 %type TimePeriod %inherits CustomVarObject {
+	%validator "ValidateTimePeriodRanges",
+
 	%attribute %string "display_name",
 
 	%require "update",
