--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -546,7 +546,7 @@ object CheckCommand "disk" {
 	vars.disk_wfree = 20
 	vars.disk_cfree = 10
 	vars.disk_megabytes = true
-	vars.disk_exclude_type = ["none", "tmpfs", "sysfs", "proc", "devtmpfs"]
+	vars.disk_exclude_type = ["none", "tmpfs", "sysfs", "proc", "devtmpfs", "devfs", "mtmfs"]
 }
 
 object CheckCommand "users" {
