Fix incorrect macro name in the disk check command
refs #8316

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -432,7 +432,7 @@ object CheckCommand "disk" {
 		}
 
 		"-p" = {
-			value = "$disk_partition$"
+			value = "$disk_partitions$"
 			description = "Path or partition (may be repeated)"
 			repeat_key = true
 		}
