Fall back to using address6 when the address attribute is not set
fixes #8259

--- a/etc/icinga2/conf.d/services.conf
+++ b/etc/icinga2/conf.d/services.conf
@@ -49,7 +49,7 @@ apply Service "ssh" {
 
   check_command = "ssh"
 
-  assign where host.address && host.vars.os == "Linux"
+  assign where (host.address || host.address6) && host.vars.os == "Linux"
   ignore where host.name == "localhost" /* for upgrade safety */
 }
 
