--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -23,6 +23,7 @@
 
 template CheckCommand "snmp-manubulon-command" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	arguments = {
 		"-H" = "$snmp_address$"
@@ -56,7 +57,7 @@ template CheckCommand "snmp-manubulon-command" {
 		"-t" = "$snmp_timeout$"
 	}
 
-	vars.snmp_address = "$address$"
+	vars.snmp_address = "$check_address$"
 	vars.snmp_nocrypt = true
 	vars.snmp_community = "public"
 	vars.snmp_v2 = false
