--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -17,6 +17,19 @@
  * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.             *
  ******************************************************************************/
 
+template CheckCommand "ipv4-or-ipv6" {
+	vars.check_address = {{
+		var addr_v4 = macro("$address$")
+		var addr_v6 = macro("$address6$")
+
+		if (addr_v4) {
+			return addr_v4
+		} else {
+			return addr_v6
+		}
+	}}
+}
+
 template CheckCommand "ping-common" {
 	import "plugin-check-command"
 
@@ -36,6 +49,13 @@ template CheckCommand "ping-common" {
 	vars.ping_cpl = 15
 }
 
+object CheckCommand "ping" {
+	import "ping-common"
+	import "ipv4-or-ipv6"
+
+	vars.ping_address = "$check_address$"
+}
+
 object CheckCommand "ping4" {
 	import "ping-common"
 
@@ -52,14 +72,27 @@ object CheckCommand "ping6" {
 	vars.ping_address = "$address6$"
 }
 
-object CheckCommand "hostalive" {
-	import "ping4"
-
+template CheckCommand "hostalive-common" {
 	vars.ping_wrta = 3000.0
 	vars.ping_wpl = 80
 
 	vars.ping_crta = 5000.0
 	vars.ping_cpl = 100
+}
+
+object CheckCommand "hostalive" {
+	import "ping"
+	import "hostalive-common"
+}
+
+object CheckCommand "hostalive4" {
+	import "ping4"
+	import "hostalive-common"
+}
+
+object CheckCommand "hostalive6" {
+	import "ping6"
+	import "hostalive-common"
 }
 
 template CheckCommand "fping-common" {
@@ -127,6 +160,7 @@ object CheckCommand "passive" {
 
 object CheckCommand "tcp" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [
 		PluginDir + "/check_tcp",
@@ -134,11 +168,12 @@ object CheckCommand "tcp" {
 		"-p", "$tcp_port$"
 	]
 
-	vars.tcp_address = "$address$"
+	vars.tcp_address = "$check_address$"
 }
 
 object CheckCommand "ssl" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_tcp" ]
 
@@ -150,11 +185,12 @@ object CheckCommand "ssl" {
 		"-D" = "$ssl_cert_valid_days_warn$,$ssl_cert_valid_days_critical$"
 	}
 
-	vars.ssl_address = "$address$"
+	vars.ssl_address = "$check_address$"
 }
 
 object CheckCommand "udp" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [
 		PluginDir + "/check_udp",
@@ -162,11 +198,12 @@ object CheckCommand "udp" {
 		"-p", "$udp_port$"
 	]
 
-	vars.udp_address = "$address$"
+	vars.udp_address = "$check_address$"
 }
 
 object CheckCommand "http" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_http" ]
 
@@ -276,7 +313,7 @@ object CheckCommand "http" {
 		}
 	}
 
-	vars.http_address = "$address$"
+	vars.http_address = "$check_address$"
 	vars.http_ssl = false
 	vars.http_sni = false
 	vars.http_linespan = false
@@ -285,6 +322,7 @@ object CheckCommand "http" {
 
 object CheckCommand "ftp" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_ftp" ]
 
@@ -292,11 +330,12 @@ object CheckCommand "ftp" {
 		"-H" = "$ftp_address$"
 	}
 
-	vars.ftp_address = "$address$"
+	vars.ftp_address = "$check_address$"
 }
 
 object CheckCommand "smtp" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_smtp" ]
 
@@ -306,11 +345,12 @@ object CheckCommand "smtp" {
 		"-f" = "$smtp_mail_from$"
 	}
 
-	vars.smtp_address = "$address$"
+	vars.smtp_address = "$check_address$"
 }
 
 object CheckCommand "ssmtp" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_ssmtp" ]
 	arguments = {
@@ -318,11 +358,12 @@ object CheckCommand "ssmtp" {
 		"-p" = "$ssmtp_port$"
 	}
 
-	vars.ssmtp_address = "$address$"
+	vars.ssmtp_address = "$check_address$"
 }
 
 object CheckCommand "imap" {
   	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
   	command = [ PluginDir + "/check_imap" ]
 
@@ -331,11 +372,12 @@ object CheckCommand "imap" {
 		"-p" = "$imap_port$"
 	}
 
-  	vars.imap_address = "$address$"
+  	vars.imap_address = "$check_address$"
 }
 
 object CheckCommand "simap" {
   	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	  command = [ PluginDir + "/check_simap" ]
 
@@ -344,11 +386,12 @@ object CheckCommand "simap" {
 		"-p" = "$simap_port$"
 	}
 
-	vars.simap_address = "$address$"
+	vars.simap_address = "$check_address$"
 }
 
 object CheckCommand "pop" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
   	command = [ PluginDir + "/check_pop" ]
 
@@ -357,11 +400,12 @@ object CheckCommand "pop" {
 		"-p" = "$pop_port$"
 	}
 
-	vars.pop_address = "$address$"
+	vars.pop_address = "$check_address$"
 }
 
 object CheckCommand "spop" {
   	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_spop" ]
 
@@ -370,11 +414,12 @@ object CheckCommand "spop" {
 		"-p" = "$spop_port$"
 	}
 
-	vars.spop_address = "$address$"
+	vars.spop_address = "$check_address$"
 }
 
 object CheckCommand "ntp_time" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_ntp_time" ]
 
@@ -382,11 +427,12 @@ object CheckCommand "ntp_time" {
 		"-H" = "$ntp_address$"
 	}
 
-	vars.ntp_address = "$address$"
+	vars.ntp_address = "$check_address$"
 }
 
 object CheckCommand "ssh" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_ssh" ]
 
@@ -400,7 +446,7 @@ object CheckCommand "ssh" {
 		}
 	}
 
-	vars.ssh_address = "$address$"
+	vars.ssh_address = "$check_address$"
 }
 
 object CheckCommand "disk" {
@@ -672,6 +718,7 @@ object CheckCommand "load" {
 
 object CheckCommand "snmp" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_snmp" ]
 
@@ -693,7 +740,7 @@ object CheckCommand "snmp" {
 		}
 	}
 
-	vars.snmp_address = "$address$"
+	vars.snmp_address = "$check_address$"
 	vars.snmp_community = "public"
 	vars.snmp_invert_search = false
 	vars.snmp_timeout = "10"
@@ -701,6 +748,7 @@ object CheckCommand "snmp" {
 
 object CheckCommand "snmpv3" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_snmp" ]
 
@@ -719,7 +767,7 @@ object CheckCommand "snmpv3" {
 		"-l" = "$snmpv3_label$"
 	}
 
-	vars.snmpv3_address = "$address$"
+	vars.snmpv3_address = "$check_address$"
 	vars.snmpv3_auth_alg = "SHA"
 	vars.snmpv3_priv_alg = "AES"
 }
@@ -757,6 +805,7 @@ object CheckCommand "dhcp" {
 
 object CheckCommand "dns" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_dns" ]
 
@@ -774,11 +823,12 @@ object CheckCommand "dns" {
 	}
 
 	vars.dns_lookup = "$host_name$"
-	vars.dns_expected_answer = "$address$"
+	vars.dns_expected_answer = "$check_address$"
 }
 
 object CheckCommand "dig" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_dig" ]
 
@@ -787,11 +837,12 @@ object CheckCommand "dig" {
 		"-l" = "$dig_lookup$"
 	}
 
-	vars.dig_server = "$address$"
+	vars.dig_server = "$check_address$"
 }
 
 object CheckCommand "nscp" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_nt" ]
 
@@ -812,12 +863,13 @@ object CheckCommand "nscp" {
 		"-t" = "$nscp_timeout$"
 	}
 
-	vars.nscp_address = "$address$"
+	vars.nscp_address = "$check_address$"
 	vars.nscp_port = 12489
 }
 
 object CheckCommand "by_ssh" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_by_ssh" ]
 
@@ -835,12 +887,13 @@ object CheckCommand "by_ssh" {
 		"-t" = "$by_ssh_timeout$"
 	}
 
-	vars.by_ssh_address = "$address$"
+	vars.by_ssh_address = "$check_address$"
 	vars.by_ssh_quiet = false
 }
 
 object CheckCommand "ups" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_ups" ]
 
@@ -849,12 +902,13 @@ object CheckCommand "ups" {
 		"-u" = "$ups_name$"
 	}
 
-	vars.ups_address = "$address$"
+	vars.ups_address = "$check_address$"
 	vars.ups_name = "ups"
 }
 
 object CheckCommand "nrpe" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_nrpe" ]
 
@@ -878,7 +932,7 @@ object CheckCommand "nrpe" {
 		}
 	}
 
-	vars.nrpe_address = "$address$"
+	vars.nrpe_address = "$check_address$"
 	vars.nrpe_no_ssl = false
 	vars.nrpe_timeout_unknown = false
 
@@ -887,6 +941,7 @@ object CheckCommand "nrpe" {
 
 object CheckCommand "hpjd" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_hpjd" ]
 
@@ -896,7 +951,7 @@ object CheckCommand "hpjd" {
 		"-p" = "$hpjd_port$"
 	}
 
-	vars.hpjd_address = "$address$"
+	vars.hpjd_address = "$check_address$"
 }
 
 object CheckCommand "icmp" {
