--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -749,6 +749,13 @@ object CheckCommand "snmp" {
 			set_if = "$snmp_invert_search$"
 			description = "Invert search result and return CRITICAL if found"
 		}
+		"-P" = "$snmp_version$"
+		"-m" = "$snmp_miblist$"
+		"--rate-multiplier" = "$snmp_rate_multiplier$"
+		"--rate" = {
+			set_if = "$snmp_rate$"
+			description = "Enable rate calculation"
+		}
 	}
 
 	vars.snmp_address = {{
