ITL: Add support for GETNEXT in SNMP CheckCommand

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -578,6 +578,10 @@ object CheckCommand "snmp" {
 			set_if = "$snmp_rate$"
 			description = "Enable rate calculation"
 		}
+                "-n" = {
+                    set_if = "$snmp_getnext$"
+                    description = "Use SNMP GETNEXT instead of SNMP GET"
+                }
 	}
 
 	vars.snmp_address = "$address$"
