Add more arguments for the 'udp' check command
fixes #8410

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -198,6 +198,18 @@ object CheckCommand "udp" {
 		"-p", "$udp_port$"
 	]
 
+	arguments = {
+		"-s" = {
+			value = "$udp_send$"
+			required = true
+		}
+		"-e" = {
+			value = "$udp_expect$"
+			required = true
+		}
+		"-q" = "$udp_quit$"
+	}
+
 	vars.udp_address = "$check_address$"
 }
 
