Add validator for the 'ignore_soft_states' attribute
refs #7326

--- a/lib/icinga/icinga-type.conf
+++ b/lib/icinga/icinga-type.conf
@@ -285,6 +285,7 @@
 	%attribute %array "states" {
 		%attribute %number "*"
 	},
+	%attribute %number "ignore_soft_states",
 	%attribute %number "disable_checks",
 	%attribute %number "disable_notifications"
 }
